[package]
name = "uc8151"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "no_std library for the UC8151(IL0373) e-ink display with embedded-graphics support"
repository = "https://github.com/9names/uc8151-rs"
categories = ["no-std"]

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-graphics-core = { version = "0.4", optional = true }

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]
